src/test/ui/moves/moves-based-on-type-access-to-field.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-access-to-field.rs:11:12
   |
LL |     consume(x.into_iter().next().unwrap());
   |             - value moved here
LL |     touch(&x[0]);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::vec::Vec<std::string::String>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
